force-app/main/default/objects/Lead/fields/AutoNumberToyota__c.field-meta.xml
<CustomField>
    <fullName>AutoNumberToyota__c</fullName>
    <description>Para uso del round robin toyota</description>
    <label>AutoNumberToyota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>