force-app/main/default/objects/Lead/fields/Cedula_Nro__c.field-meta.xml
<CustomField>
    <fullName>Cedula_Nro__c</fullName>
    <label>Cedula Nro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>