force-app/main/default/objects/Lead/fields/CheckBandera__c.field-meta.xml
<CustomField>
    <fullName>CheckBandera__c</fullName>
    <formula>NOT(ISBLANK( Company ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckBandera</label>
    <type>Checkbox</type>
</CustomField>