force-app/main/default/objects/Lead/fields/Color_de_tiempo__c.field-meta.xml
<CustomField>
    <fullName>Color_de_tiempo__c</fullName>
    <formula>CASE(
Indicador_de_tiempo__c,
&quot;Verde&quot;,IMAGE(&quot;https://gcpcrm--c.documentforce.com/servlet/servlet.FileDownload?file=0153k00000Avdar&quot;,&quot;Verde&quot;,25,25),
&quot;Naranja&quot;,IMAGE(&quot;https://gcpcrm--c.documentforce.com/servlet/servlet.FileDownload?file=0153k00000Avdac&quot;,&quot;Naranja&quot;,25,25),
&quot;Rojo&quot;,IMAGE(&quot;https://gcpcrm--c.documentforce.com/servlet/servlet.FileDownload?file=0153k00000Avdah&quot;,&quot;Rojo&quot;,25,25),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color de tiempo</label>
    <type>Text</type>
</CustomField>