force-app/main/default/objects/Lead/fields/Como_desea_realizar_su_compra__c.field-meta.xml
<CustomField>
    <fullName>Como_desea_realizar_su_compra__c</fullName>
    <label>¿Como desea realizar su compra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aún no desea realizar su compra</fullName>
            </value>
            <value>
                <fullName>Ciclo CP</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Credex</fullName>
            </value>
            <value>
                <fullName>Credifacil</fullName>
            </value>
            <value>
                <fullName>FIDEM</fullName>
            </value>
            <value>
                <fullName>Financiamiento bancario</fullName>
            </value>
            <value>
                <fullName>Go Leasing</fullName>
            </value>
            <value>
                <fullName>Instacredit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>