force-app/main/default/objects/Lead/fields/Cual_seria_su_forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Cual_seria_su_forma_de_pago__c</fullName>
    <label>¿Cual seria su forma de pago?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>De contado</fullName>
            </value>
            <value>
                <fullName>Financiamiento</fullName>
            </value>
            <value>
                <fullName>Intercambio de vehiculo</fullName>
            </value>
            <value>
                <fullName>Aun no estoy seguro de comprar_vender</fullName>
                <label>Aún no estoy seguro de comprar/vender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>