force-app/main/default/objects/Lead/fields/Cuando_desea_realizar_su_compra__c.field-meta.xml
<CustomField>
    <fullName>Cuando_desea_realizar_su_compra__c</fullName>
    <label>¿Cuándo desea realizar su compra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esta semana</fullName>
            </value>
            <value>
                <fullName>En los próximos 30 días</fullName>
            </value>
            <value>
                <fullName>1-3 meses</fullName>
            </value>
            <value>
                <fullName>3-6 meses</fullName>
            </value>
            <value>
                <fullName>Aun no estoy seguro de comprar</fullName>
            </value>
            <value>
                <fullName>0 a 3 meses</fullName>
                <isActive>false</isActive>
                <label>0 a 3 meses</label>
            </value>
            <value>
                <fullName>3 a 6 meses</fullName>
                <isActive>false</isActive>
                <label>3 a 6 meses</label>
            </value>
            <value>
                <fullName>Necesito más tiempo</fullName>
                <isActive>false</isActive>
                <label>Necesito más tiempo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>