force-app/main/default/objects/Lead/fields/Cuenta_creada_en_sistema_externo__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_creada_en_sistema_externo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Este check indica si el Lead ha sido creado en el CRM externo</inlineHelpText>
    <label>Cuenta creada en sistema externo</label>
    <type>Checkbox</type>
</CustomField>