force-app/main/default/objects/Lead/fields/Departamento_UDC__c.field-meta.xml
<CustomField>
    <fullName>Departamento_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Departamento</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Departamento)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>