force-app/main/default/objects/Lead/fields/Desea_intercambiar_su_veh_culo_en_su_co__c.field-meta.xml
<CustomField>
    <fullName>Desea_intercambiar_su_veh_culo_en_su_co__c</fullName>
    <label>¿Intercambia su vehículo en su compra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>