force-app/main/default/objects/Lead/fields/Desea_que_le_contacte_el_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Desea_que_le_contacte_el_vendedor__c</fullName>
    <label>¿Desea que le contacte el vendedor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>