force-app/main/default/objects/Lead/fields/Desea_realizar_intercambios__c.field-meta.xml
<CustomField>
    <fullName>Desea_realizar_intercambios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Desea realizar intercambios?</label>
    <type>Checkbox</type>
</CustomField>