force-app/main/default/objects/Lead/fields/Detalle_de_Cita__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_Cita__c</fullName>
    <description>Almacena detalle de cita para prueba de manejo</description>
    <label>Detalle de Cita</label>
    <type>Date</type>
</CustomField>