force-app/main/default/objects/Lead/fields/Donde_desea_ser_atendido__c.field-meta.xml
<CustomField>
    <fullName>Donde_desea_ser_atendido__c</fullName>
    <label>¿Dónde desea ser atendido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlantico Norte</fullName>
                <label>Atlántico Norte</label>
            </value>
            <value>
                <fullName>Atlantico Sur</fullName>
                <label>Atlántico Sur</label>
            </value>
            <value>
                <fullName>Boaco</fullName>
            </value>
            <value>
                <fullName>Carazo</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Chontales</fullName>
            </value>
            <value>
                <fullName>Esteli</fullName>
                <label>Estelí</label>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Jinotega</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Leon</fullName>
                <label>León</label>
            </value>
            <value>
                <fullName>Madriz</fullName>
            </value>
            <value>
                <fullName>Managua</fullName>
            </value>
            <value>
                <fullName>Masaya</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Nueva Segovia</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
            <value>
                <fullName>Rio San Juan</fullName>
                <label>Río San Juan</label>
            </value>
            <value>
                <fullName>Rivas</fullName>
            </value>
            <value>
                <fullName>Estelí</fullName>
                <isActive>false</isActive>
                <label>Estelí</label>
            </value>
            <value>
                <fullName>León</fullName>
                <isActive>false</isActive>
                <label>León</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>