force-app/main/default/objects/Lead/fields/Estoy_interasado_en__c.field-meta.xml
<CustomField>
    <fullName>Estoy_interasado_en__c</fullName>
    <label>Estoy interasado en</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprar Auto Seminuevo</fullName>
            </value>
            <value>
                <fullName>Vender mi Auto</fullName>
            </value>
            <value>
                <fullName>Intercambiar mi Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>