force-app/main/default/objects/Lead/fields/Fecha_hora_contacto_exitoso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_contacto_exitoso__c</fullName>
    <description>Este campo indica la fecha y la hora cuando un lead cambia a estado &quot;Contacto exitoso&quot; mediante una automatizacion</description>
    <label>Fecha/hora contacto exitoso</label>
    <type>DateTime</type>
</CustomField>