force-app/main/default/objects/Lead/fields/Fecha_hora_contacto_intentado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_contacto_intentado__c</fullName>
    <description>Este campo indica la fecha y la hora cuando un lead cambia a estado &quot;Contacto intentado&quot; mediante una automatizacion</description>
    <label>Fecha/hora contacto intentado</label>
    <type>DateTime</type>
</CustomField>