force-app/main/default/objects/Lead/fields/Fecha_hora_convertido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_convertido__c</fullName>
    <description>Esta campo almacena la fech ay hora en el moemnto que se convierte el lead mediante automatizacion</description>
    <label>Fecha/hora convertido</label>
    <type>DateTime</type>
</CustomField>