force-app/main/default/objects/Lead/fields/Fecha_hora_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_creacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha/hora creación</label>
    <type>DateTime</type>
</CustomField>