force-app/main/default/objects/Lead/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rellenar sólo si el Lead corresponde a un individuo</inlineHelpText>
    <label>Genero</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Género</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Genero)</relationshipLabel>
    <relationshipName>Leads7</relationshipName>
    <type>Lookup</type>
</CustomField>