force-app/main/default/objects/Lead/fields/Ha_comprado_anteriormente_en_CP__c.field-meta.xml
<CustomField>
    <fullName>Ha_comprado_anteriormente_en_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Ha comprado anteriormente en CP?</label>
    <type>Checkbox</type>
</CustomField>