force-app/main/default/objects/Lead/fields/Indicador_de_tiempo__c.field-meta.xml
<CustomField>
    <fullName>Indicador_de_tiempo__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(Status,&quot;Esperando contacto&quot;),ISPICKVAL(Status,&quot;Contacto intentado&quot;)),Tiempo_transcurrido__c&lt;20),&quot;Verde&quot;,
			IF(AND(OR(ISPICKVAL(Status,&quot;Esperando contacto&quot;),ISPICKVAL(Status,&quot;Contacto intentado&quot;)),AND(Tiempo_transcurrido__c&gt;20,Tiempo_transcurrido__c&lt;=60)),&quot;Naranja&quot;,
					IF(AND(OR(ISPICKVAL(Status,&quot;Esperando contacto&quot;),ISPICKVAL(Status,&quot;Contacto intentado&quot;)),Tiempo_transcurrido__c&gt;60),&quot;Rojo&quot;,&quot;&quot;
								)   
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador de tiempo</label>
    <type>Text</type>
</CustomField>