force-app/main/default/objects/Lead/fields/Ingresos_mensuales__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_mensuales__c</fullName>
    <inlineHelpText>En dolares</inlineHelpText>
    <label>Ingresos mensuales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>