force-app/main/default/objects/Lead/fields/LeadCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LeadCreatedDate__c</fullName>
    <description>fecha de creacion del lead</description>
    <label>LeadCreatedDate</label>
    <type>Date</type>
</CustomField>