force-app/main/default/objects/Lead/fields/Marca_a_cotizar__c.field-meta.xml
<CustomField>
    <fullName>Marca_a_cotizar__c</fullName>
    <label>Marca a cotizar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Autolote</fullName>
            </value>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>JMC</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>BYD</fullName>
            </value>
            <value>
                <fullName>Mercedes Benz</fullName>
            </value>
            <value>
                <fullName>SsangYong</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>HERO</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>