force-app/main/default/objects/Lead/fields/Marca_a_cotizar_autolote__c.field-meta.xml
<CustomField>
    <fullName>Marca_a_cotizar_autolote__c</fullName>
    <label>Marca a cotizar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>