force-app/main/default/objects/Lead/fields/Marca_UDC__c.field-meta.xml
<CustomField>
    <fullName>Marca_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para realizar por medio de trigger el matcheo con el campo picklist, util para hacer la conversion a oportunidad</description>
    <label>Marca UDC</label>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Marca UDC)</relationshipLabel>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>