force-app/main/default/objects/Lead/fields/Modelo_a_cotizar__c.field-meta.xml
<CustomField>
    <fullName>Modelo_a_cotizar__c</fullName>
    <label>Modelo a cotizar</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca_a_cotizar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agya</fullName>
            </value>
            <value>
                <fullName>Yaris</fullName>
            </value>
            <value>
                <fullName>Yaris Hatchback</fullName>
            </value>
            <value>
                <fullName>Corolla</fullName>
            </value>
            <value>
                <fullName>Prius</fullName>
            </value>
            <value>
                <fullName>Camry</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
            <value>
                <fullName>Fortuner</fullName>
            </value>
            <value>
                <fullName>Rav4</fullName>
            </value>
            <value>
                <fullName>Prado</fullName>
            </value>
            <value>
                <fullName>Landcruiser SW</fullName>
            </value>
            <value>
                <fullName>Hilux 2.4 4x2</fullName>
            </value>
            <value>
                <fullName>Hilux 2.4 4x4</fullName>
            </value>
            <value>
                <fullName>Hilux 2.8 4x4</fullName>
            </value>
            <value>
                <fullName>Tacoma</fullName>
            </value>
            <value>
                <fullName>Tundra</fullName>
            </value>
            <value>
                <fullName>Land Cruiser Pickup cabina sencilla</fullName>
            </value>
            <value>
                <fullName>Land Cruiser Pickup cabina doble</fullName>
            </value>
            <value>
                <fullName>Hiace bus</fullName>
            </value>
            <value>
                <fullName>Hiace</fullName>
            </value>
            <value>
                <fullName>Coaster</fullName>
            </value>
            <value>
                <fullName>Dyna</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Celerio</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
            <value>
                <fullName>Dzire</fullName>
            </value>
            <value>
                <fullName>S-presso</fullName>
            </value>
            <value>
                <fullName>Baleno</fullName>
            </value>
            <value>
                <fullName>Vitara</fullName>
            </value>
            <value>
                <fullName>XL7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>