force-app/main/default/objects/Lead/fields/Modelo_a_cotizar_autolote__c.field-meta.xml
<CustomField>
    <fullName>Modelo_a_cotizar_autolote__c</fullName>
    <label>Modelo a cotizar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>