force-app/main/default/objects/Lead/fields/Modelo_UDC__c.field-meta.xml
<CustomField>
    <fullName>Modelo_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para realizar por medio de trigger el matcheo con el campo picklist, util para hacer la conversion a oportunidad</description>
    <label>Modelo UDC</label>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Modelo UDC)</relationshipLabel>
    <relationshipName>Leads6</relationshipName>
    <type>Lookup</type>
</CustomField>