force-app/main/default/objects/Lead/fields/Motivo_de_lead_perdido__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_lead_perdido__c</fullName>
    <label>Motivo de lead perdido</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente compro otra marca (externa)</fullName>
            </value>
            <value>
                <fullName>Cliente cotiza otro modelo de GCP</fullName>
            </value>
            <value>
                <fullName>Cliente cotizo por otro servicio/producto de CP</fullName>
            </value>
            <value>
                <fullName>Cliente no contesto a los intentos de contacto</fullName>
            </value>
            <value>
                <fullName>Cliente no cumple requisitos de crédito</fullName>
            </value>
            <value>
                <fullName>Cliente pospuso la compra</fullName>
            </value>
            <value>
                <fullName>Cliente sólo queria informacion (precio, financiamiento, características)</fullName>
            </value>
            <value>
                <fullName>Cliente ya está siendo atendido por un agente o vendedor</fullName>
            </value>
            <value>
                <fullName>Falta de disponibilidad de inventario</fullName>
            </value>
            <value>
                <fullName>Prospecto duplicado</fullName>
            </value>
            <value>
                <fullName>Cliente solo queria avalúo</fullName>
            </value>
            <value>
                <fullName>Precio/Oferta del producto</fullName>
            </value>
            <value>
                <fullName>Cliente compró en AN</fullName>
            </value>
            <value>
                <fullName>Cliente ilocalizable</fullName>
            </value>
            <value>
                <fullName>Cliente no esta interesado</fullName>
            </value>
            <value>
                <fullName>Cliente desea vender su vehiculo</fullName>
                <isActive>false</isActive>
                <label>Cliente desea vender su vehiculo</label>
            </value>
            <value>
                <fullName>Cliente quiere vender su vehículo (avalúo)</fullName>
                <isActive>false</isActive>
                <label>Cliente quiere vender su vehículo (avalúo)</label>
            </value>
            <value>
                <fullName>Lead duplicado</fullName>
                <isActive>false</isActive>
                <label>Lead duplicado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>