force-app/main/default/objects/Lead/fields/Municipio_UDC__c.field-meta.xml
<CustomField>
    <fullName>Municipio_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor del campo &quot;Municipio&quot; no coincide con los criterios de filtro</errorMessage>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Municipio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Municipio)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>