force-app/main/default/objects/Lead/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rellenar sólo si el Lead corresponde a un individuo</inlineHelpText>
    <label>Nacionalidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nacionalidad</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads (Nacionalidad)</relationshipLabel>
    <relationshipName>Leads8</relationshipName>
    <type>Lookup</type>
</CustomField>