force-app/main/default/objects/Lead/fields/Pais_de_origen__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_origen__c</fullName>
    <label>Pais de origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Panamá</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>España</fullName>
            </value>
            <value>
                <fullName>Estados Unidos</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Managua</fullName>
                <isActive>false</isActive>
                <label>Managua</label>
            </value>
            <value>
                <fullName>NICARGUA</fullName>
                <isActive>false</isActive>
                <label>NICARGUA</label>
            </value>
            <value>
                <fullName>Nicaragu</fullName>
                <isActive>false</isActive>
                <label>Nicaragu</label>
            </value>
            <value>
                <fullName>Nicaragüense</fullName>
                <isActive>false</isActive>
                <label>Nicaragüense</label>
            </value>
            <value>
                <fullName>Nixaragua</fullName>
                <isActive>false</isActive>
                <label>Nixaragua</label>
            </value>
            <value>
                <fullName>Panama</fullName>
                <isActive>false</isActive>
                <label>Panama</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>