force-app/main/default/objects/Lead/fields/Pais_Region__c.field-meta.xml
<CustomField>
    <fullName>Pais_Region__c</fullName>
    <label>Pais/Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managua</fullName>
            </value>
            <value>
                <fullName>Jinotega</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Esteli</fullName>
            </value>
            <value>
                <fullName>Leon</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>