force-app/main/default/objects/Lead/fields/Pais_UDC__c.field-meta.xml
<CustomField>
    <fullName>Pais_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>El país se elige por picklist pero se completa por trigger</description>
    <label>País UDC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pais</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>