force-app/main/default/objects/Lead/fields/RecordType_Moto__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Moto__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Venta_motos&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Moto</label>
    <type>Checkbox</type>
</CustomField>