force-app/main/default/objects/Lead/fields/Sitio_Web_Origen__c.field-meta.xml
<CustomField>
    <fullName>Sitio_Web_Origen__c</fullName>
    <label>Sitio Web Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>