force-app/main/default/objects/Lead/fields/Tiempo_transcurrido__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_transcurrido__c</fullName>
    <formula>(( NOW() - CreatedDate)*1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo transcurrido (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>