force-app/main/default/objects/Lead/fields/Tiempo_transcurrido_contacto_exitoso__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_transcurrido_contacto_exitoso__c</fullName>
    <formula>( Fecha_hora_contacto_exitoso__c - CreatedDate) *1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>En minutos</inlineHelpText>
    <label>Tiempo transcurrido c. exitoso (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>