force-app/main/default/objects/Lead/fields/Tiempo_transcurrido_convertido__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_transcurrido_convertido__c</fullName>
    <formula>(Fecha_hora_convertido__c - CreatedDate)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo transcurrido convertido (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>