force-app/main/default/objects/Lead/fields/Tipo_de_decumento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_decumento__c</fullName>
    <label>Tipo de decumento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de Identidad</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>